Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/082_function_missing_return_while_return.xi
f(x:bool):int
{
    while x {
        return 0
    }
}
//@PRACOWNIA
//@should_not_typecheck
